--- a/codebooks/fertility.qmd
+++ b/codebooks/fertility.qmd
@@ -1,11 +1,11 @@
-## fertility.csv {#fertility}
+## fertility.csv {-}
 
 ```{r}
 #| echo: false
-source("scripts/_common.R")
+source("../scripts/_common.R")
 ```
 
-Human overpopulation is a growing concern and has been associated with depletion of Earth's natural resources (water is a big one that ) and degredation of the environment. This, in turn, has social and economic consequences such as global tension over resources such as water and food, higher cost of living and higher unemployment rates. The data in [fertility.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/fertility.csv) were collected from several sources (e.g., World Bank) and are thought to correlate with fertility rates, a measure directly linked to population. The variables are:
+Human overpopulation is a growing concern and has been associated with depletion of Earth's natural resources (water is a big one that ) and degredation of the environment. This, in turn, has social and economic consequences such as global tension over resources such as water and food, higher cost of living and higher unemployment rates. The data in **fertility.csv** were collected from several sources (e.g., World Bank) and are thought to correlate with fertility rates, a measure directly linked to population. The variables are:
 
 - `country`: Country name
 - `region`: Region of the world
