--- a/05-03-multiple-comparisons.qmd
+++ b/05-03-multiple-comparisons.qmd
@@ -19,24 +19,20 @@ library(ggridges)
 library(tidyverse)
 
 # Read in data and create dummy variables
-pew = read_csv(file = "https://raw.githubusercontent.com/zief0002/modeling/main/data/pew.csv") |>
+pew = read_csv(file = "https://raw.githubusercontent.com/zief0002/modeling/main/data/pew2.csv") |>
   mutate(
     none    = if_else(news_source == "None", 1, 0),
     con     = if_else(news_source == "Conservative", 1, 0),
     com     = if_else(news_source == "Comedy", 1, 0),
-    lib     = if_else(news_source == "Liberal", 1, 0),
-    con_com = if_else(news_source == "Conservative_Comedy", 1, 0),
-    con_lib = if_else(news_source == "Conservative_Liberal", 1, 0),
-    lib_com = if_else(news_source == "Liberal_Comedy", 1, 0),
-    all     = if_else(news_source == "All", 1, 0),
+    lib     = if_else(news_source == "Liberal", 1, 0)
     )
 
 # View data
 pew
 
 # Fit model (None is reference group)
-lm.none.2 = lm(knowledge ~ 1 + age + education + news + engagement + all + con + 
-              com + lib + con_com + con_lib + lib_com, data = pew)
+lm.none.2 = lm(knowledge ~ 1 + age + education + news + engagement + 
+                 com + con + lib, data = pew)
 ```
 
 <br />
@@ -50,6 +46,7 @@ Recall that when we evaluated the difference between each pair of news sources, 
 #| echo: false
 #| out-width: "100%"
 #| fig-cap: "Remembering Type I and II errors...simplified by Flowing Data."
+#| fig-alt: "Remembering Type I and II errors...simplified by Flowing Data."
 
 knitr::include_graphics("figs/20-01-errors.png")
 ```
@@ -80,7 +77,7 @@ $$
 \mathrm{False~Positive~Rate} = (\mathrm{Number~of~Tests~Evaluated}) \times 0.05
 $$
 
-If you were only doing one test, the false positive rate would be 0.05, our designated $\alpha$-value. For three tests, the false positive rate would be $3\times.05=.15$, much higher than the designated $\alpha$-value. For our news knowledge example, we carried out 28 tests. The false positive rate in our study is $28\times.05>1$; that is we are essentially guaranteed to have at least one false discovery!
+If you were only doing one test, the false positive rate would be 0.05, our designated $\alpha$-value. For three tests, the false positive rate would be $3\times.05=.15$, much higher than the designated $\alpha$-value. For our news knowledge example, we carried out 6 tests. The false positive rate in our study is $6\times.05=.30$!
 
 <br />
 
@@ -134,12 +131,12 @@ That means, if we want our family-wise error rate to be 0.05, we can set this to
 
 $$
 \begin{split}
-28 \times \alpha_{\mathrm{PC}} &= 0.05 \\[2ex]
-\alpha_{\mathrm{PC}} &= \frac{0.05}{28} \\[2ex]
-&= 0.001785714
+6 \times \alpha_{\mathrm{PC}} &= 0.05 \\[2ex]
+\alpha_{\mathrm{PC}} &= \frac{0.05}{6} \\[2ex]
+&= 0.008
 \end{split}
 $$
-That is, rather than comparing the *p*-value we got to 0.05, we should have been comparing the *p*-value to 0.001785714.
+That is, rather than comparing the *p*-value we got to 0.05, we should have been comparing the *p*-value to 0.008.
 
 
 In practice, we don't adjust the $alpha$-value, but instead adjust the *p*-value. The easiest way to make these adjustments is to multiply each *p*-value for the group comparisons by the number of tests being evaluated. If we have *k* tests, then:
@@ -151,60 +148,36 @@ $$
 In our example,
 
 $$
-p_{\mathrm{Adjusted}}=p_{\mathrm{Original}} \times 28
+p_{\mathrm{Adjusted}}=p_{\mathrm{Original}} \times 6
 $$
 
 :::fyi
 This *p*-value adjustment is referred to as the Dunn-Bonferroni adjustment.^[In our patriarchal society, unfortunately Olive Dunn's name is often removed from the nomenclature, and this adjustment gets referred to as the "Bonferroni adjustment".]
 :::
 
-Consider the 28 *p*-values for our pairwise comparisons of news knowledge from the model that included covariates (from `lm.none.2`). To compute the Dunn-Bonferroni adjusted *p*-values for these comparisons, we could use the followwing syntax.
+Consider the 6 *p*-values for our pairwise comparisons of news knowledge from the model that included covariates (from `lm.none.2`). To compute the Dunn-Bonferroni adjusted *p*-values for these comparisons, we could use the followwing syntax.
 
 ```{r}
 c(
-  0.2170, #All vs. Comedy                              
-  0.2550, #All vs. Conservative                        
-  0.2209, #All vs. Conservative_Comedy                 
-  0.1142, #All vs. Conservative_Liberal                
-  0.3514, #All vs. Liberal                             
-  0.0003, #All vs. Liberal_Comedy                      
-  0.1158, #All vs. None                                
-  0.0155, #Comedy vs. Conservative                     
-  0.8630, #Comedy vs. Conservative_Comedy              
-  0.0084, #Comedy vs. Conservative_Liberal             
-  0.5109, #Comedy vs. Liberal                          
-  0.0536, #Comedy vs. Liberal_Comedy                   
-  0.0037, #Comedy vs. None                             
-  0.0086, #Conservative vs. Conservative_Comedy        
-  0.4859, #Conservative vs. Conservative_Liberal       
-  0.0016, #Conservative vs. Liberal                    
-  0.0000000289, #Conservative vs. Liberal_Comedy             
-  0.3307, #Conservative vs. None                       
-  0.0033, #Conservative_Comedy vs. Conservative_Liberal
-  0.6060, #Conservative_Comedy vs. Liberal             
-  0.0190, #Conservative_Comedy vs. Liberal_Comedy      
-  0.0022, #Conservative_Comedy vs. None                
-  0.0012, #Conservative_Liberal vs. Liberal            
-  0.00000000826, #Conservative_Liberal vs. Liberal_Comedy     
-  0.9042, #Conservative_Liberal vs. None               
-  0.0008, #Liberal vs. Liberal_Comedy                  
-  0.0000477, #Liberal vs. None                            
-  0.00000000284  #Liberal_Comedy vs. None                     
-  ) * 28
+                              
+  0.01142, #Comedy vs. Conservative                     
+  0.54808, #Comedy vs. Liberal                          
+  0.00977, #Comedy vs. None                             
+  0.000582, #Conservative vs. Liberal                    
+  0.955204, #Conservative vs. None                       
+  0.000385 #Liberal vs. None                            
+  ) * 6
 ```
 
-We can compare these adjusted *p*-values to 0.05 to evaluate whether groups differ in their average news knowledge. There are now far fewer groups that differ in their average news knowledge.
+We can compare these adjusted *p*-values to 0.05 to evaluate whether groups differ in their average news knowledge. There are now only two comparisons that are statistically different than 0:
 
-- All vs. Liberal_Comedy ($p=.008$)
-- Conservative vs. Liberal ($p=.045$)
-- Conservative vs. Liberal_Comedy ($p<.001$)
-- Conservative_Liberal vs. Liberal ($p=.034$)
-- Conservative_Liberal vs. Liberal_Comedy ($p<.001$)
-- Liberal vs. Liberal_Comedy ($p=.022$)             
-- Liberal vs. None ($p=.001$)         
-- Liberal_Comedy vs. None ($p<.001$)
 
-Of the 28 comparisons, we found only 8 statistically discernible differences. Compare this to the 15 statistically discernible differences we found when we used the unadjusted *p*-values (in the previous chapter). This means that 7 of those previous findings were likely false discoveries!
+- Conservative vs. Liberal ($p=.003$)
+- Liberal vs. None ($p=.002$)
+      
+
+
+Of the 6 comparisons, we found only 2 statistically discernible differences. Compare this to the 4 statistically discernible differences we found when we used the unadjusted *p*-values (in the previous chapter). This means that 2 of those previous findings were likely false discoveries!
 
 :::fyi
 In practice, since *p*-values have limits of 0 and 1, any adjusted *p*-value that exceeds 1 we limit to 1 when we report them.
@@ -259,17 +232,46 @@ emmeans(lm.news_source, specs = pairwise ~news_source, adjust = "bonferroni")
 In the `$contrasts` part of the output, the *p*-values shown are the Dunn-Bonferroni adjust *p*-values. . Note that the output in `$emmeans` section remains exactly the same as when we used `adjust="none"`. This is because the `$emmeans` section will always be the model predicted means from the fitted `lm()`. 
 
 
-We can display the results of the Dunn-Bonferroni pairwise differences in a visualization similar to those we created previously. @fig-mult-comp-bonferroni shows one such visualization. Note that the adjusted mean values have been updated based on the values from the `$emmeans` part of the output. (These values should be more exact as we rounded extensively in the computations of these values.)
+We can display the results of the Dunn-Bonferroni pairwise differences in a table or visualization similar to those we created previously. @tbl-mult-comp-bonferroni shows one such table Note that the adjusted mean values have been updated based on the values from the `$emmeans` part of the output. (These values should be more exact as we rounded extensively in the computations of these values.)
 
 
 ```{r}
-#| label: fig-mult-comp-bonferroni
+#| label: tbl-mult-comp-bonferroni
 #| echo: false
-#| fig-cap: "Pairwise comparisons of adjusted mean news knowledge for different news sources. Means were adjusted for differences in age, education level, amount of news consumed, and political engagement. Statistical comparisons have been adjusted for multiple comparisons using the Dunn-Bonferroni adjustment. <br /><br />*Instructions:* Read across the row for a news sources to compare adjusted mean news knowledge with the news sources listed along the top of the chart. The symbols indicate whether the adjusted mean news knowledge of the news source in the row is significantly lower than that of the comparison news source, significantly higher than that of the comparison news source, or if there is no statistically discernible difference between the adjusted mean news knowledge of the two news sources."
-#| out-width: "90%"
+#| tbl-cap: "Pairwise contrasts between the average news knowledge for different news sources after controlling for differences in age, education, news consumption, and political engagement. The p-values have been adjusted using the Dunn-Bonferroni method."
+#| results: asis
+data.frame(emmeans(lm.news_source, specs = pairwise ~news_source, adjust = "bonferroni")$contrasts) |>
+  select(contrast,estimate, p.value) |>
+  gt() |>
+  cols_align(
+    align = "left",
+    columns = c(contrast)
+  ) |>
+  cols_align(
+    align = "center",
+    columns = c(estimate, p.value)
+  ) |>
+  cols_label(
+    contrast = html("<br />Contrast"),
+    estimate = html("Mean<br />Difference"),
+    p.value = html("<br /><i>p</i>")
+  ) |>
+  fmt_number(
+    columns = estimate,
+    decimals = 2
+  ) |>
+  fmt_number(
+    columns = p.value,
+    decimals = 3
+  ) |>
+  tab_options(
+    table.width = pct(75)
+    ) |>
+  as_raw_html()
 
-knitr::include_graphics("figs/05-03-mult-comp-bonferroni.png")
 ```
+
+
 
 :::fyi
 There are many other methods to control the familywise error rate. Some other popular methods include the Tukey adjustment [@Tukey:1949], the Scheffé adjustment [@Scheffe:1959], and the Holm adjustment [@Holm:1979]. Each method gives different *p*-values based on the mathematics of the adjustments, but they are all pretty similar. The Dunn-Bonferroni method is the most popular method used in the educational and social sciences to control the familywise error rate.
@@ -295,27 +297,54 @@ The primary method for controlling the false discovery rate used in the social a
 emmeans(lm.news_source, specs = pairwise ~news_source, adjust = "BH")
 ```
 
-Using this *p*-value adjustment method, we find 13 statistically discernible differences. These are displayed in @fig-mult-comp-bh.
-
-
+Using this *p*-value adjustment method, we find 4 statistically discernible differences. These are displayed in @tbl-mult-comp-bh.
 
 ```{r}
-#| label: fig-mult-comp-bh
+#| label: tbl-mult-comp-bh
 #| echo: false
-#| fig-cap: "Pairwise comparisons of adjusted mean news knowledge for different news sources. Means were adjusted for differences in age, education level, amount of news consumed, and political engagement. Statistical comparisons have been adjusted for multiple comparisons using the Benjamini-Hochberg adjustment. <br /><br />*Instructions:* Read across the row for a news sources to compare adjusted mean news knowledge with the news sources listed along the top of the chart. The symbols indicate whether the adjusted mean news knowledge of the news source in the row is significantly lower than that of the comparison news source, significantly higher than that of the comparison news source, or if there is no statistically discernible difference between the adjusted mean news knowledge of the two news sources."
-#| out-width: "90%"
+#| tbl-cap: "Pairwise contrasts between the average news knowledge for different news sources after controlling for differences in age, education, news consumption, and political engagement. The p-values have been adjusted using the Benjamini-Hochberg method."
+#| results: asis
+data.frame(emmeans(lm.news_source, specs = pairwise ~news_source, adjust = "bh")$contrasts) |>
+  select(contrast,estimate, p.value) |>
+  gt() |>
+  cols_align(
+    align = "left",
+    columns = c(contrast)
+  ) |>
+  cols_align(
+    align = "center",
+    columns = c(estimate, p.value)
+  ) |>
+  cols_label(
+    contrast = html("<br />Contrast"),
+    estimate = html("Mean<br />Difference"),
+    p.value = html("<br /><i>p</i>")
+  ) |>
+  fmt_number(
+    columns = estimate,
+    decimals = 2
+  ) |>
+  fmt_number(
+    columns = p.value,
+    decimals = 3
+  ) |>
+  tab_options(
+    table.width = pct(75)
+    ) |>
+  as_raw_html()
 
-knitr::include_graphics("figs/05-03-mult-comp-bh.png")
 ```
 
-If we compare the three sets of *p*-values, there are some things you can see:
+
+
+If we compare the three sets of *p*-values (unadjusted, Dunn-Bonferroni, and Benjamini-Hochberg), there are some things you can see:
 
 - The unadjusted *p*-values are the smallest. While you are more likely to "find" effects, some (or most) of these may be false discoveries.
 - The Dunn-Bonferroni adjusted *p*-values are the largest. Controlling for familywise error rates really protects against making Type I error. To do this it heavily penalizes the *p*-values (makes them larger).
 - The Benjamini-Hochberg adjusted *p*-values are somewhere between the unadjusted and Dunn-Bonferroni *p*-values. While this helps protect against false discoveries (they are larger than the unadjusted *p*-values so you are less likely to find effects), it does so with a less heavy penalty than the Dunn-Bonferroni penalty. This protects against Type II errors.
 
 :::fyi
-In the Dunn-Bonferroni method, each of the 28 *p*-values was penalized by the exact same amount; each of the unadjusted *p*-values was multiplied by 28. The way that the Benjamini-Hochberg method protects against Type II errors is that it penalizes the *p*-values differentially. While the exact methodology is beyond the scope of the course, if you are interested you can read the original paper  in which the method was described [@Benjamini:1995].
+In the Dunn-Bonferroni method, each of the 6 *p*-values was penalized by the exact same amount; each of the unadjusted *p*-values was multiplied by 6. The way that the Benjamini-Hochberg method protects against Type II errors is that it penalizes the *p*-values differentially. While the exact methodology is beyond the scope of the course, if you are interested you can read the original paper  in which the method was described [@Benjamini:1995].
 :::
 
 
@@ -335,7 +364,7 @@ If you are unsure about which procedure to use, for many analyses the Benjamini-
 <br />
 
 
-<!-- ## Optional: Plot of Confidence Intervals for Adjusted Means Based on Adjusted *p*-Values -->
+<!-- ## Plot of Confidence Intervals for Adjusted Means Based on Adjusted *p*-Values -->
 
 <!-- Similar to the plot we created in the previous chapter, we can produce a plot of the confidence intervals for the adjusted means and then plot those for each group. One caveat is that these intervals should correspond to the adjustments we have done to the *p*-values so that readers inferences about which groups differ are consistent with what we report using the *p*-value adjustment methods. In general, this means that the CIs produced for each of the adjusted means will be wider (more uncertainty) than the original CIs. -->
 
