--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,4 @@
-<img src="figs/banner.png" class="cover"/>
+<img src="figs/banner.png" class="cover" alt=""/>
 
 
 # Front Matter {.unnumbered}
@@ -20,31 +20,16 @@ The organization of content is consistent with the sequence this content is taug
 ```{r}
 #| echo: false
 #| out-width: "100%"
+#| fig-alt: "The units are (1) Introduction to statistical computing, (2) Introduction to regression, (3) Regression inference, (4), Multiple regression, (5) Categorical predictors, and (6) Interaction effects."
 knitr::include_graphics("figs/00-00-all-units.png")
 ```
 
 <br />
 
 
-<!-- ### Content for EPsy 8251 -->
-
-<!-- The content for EPsy 8251 focuses on introducing ideas of statistical computation, and foundations of building, interpreting, and evaluating GLMs. In particular, this content includes OLS estimation, coefficient- and model-based inference, dummy-coded variables, and statistical interactions. -->
-
-
-<!-- <br /> -->
-
-
-<!-- ### Content for EPsy 8252 -->
-
-<!-- The content for EPsy 8252 focuses on extending ideas of scientific computation and statistical modeling. In particular, this content focuses on dealing with some of the issues that crop up in practical work including modeling non-linearity using statistical transformations, and modeling non-independent data using mixed-effects models. Additional tools for model evaluation (e.g., information criteria) are also presented. -->
-
-
-<br />
-
-
 ## Resources
 
-This book refers to and uses several data sets throughout the text. Each of these data sets and their codebooks are available online at the book's github repository, https://github.com/zief0002/modeling/. 
+This book refers to and uses several data sets throughout the text. Each of these data sets and their codebooks are available online at the book's github repository, <https://github.com/zief0002/modeling/>. 
 
 
 
@@ -64,7 +49,7 @@ Artwork by [&commat;allison_horst](https://twitter.com/allison_horst)
 
 Icon and note ideas and prototypes by [Desirée De Leon](http://desiree.rbind.io/).
 
-The book is typeset using [Crimson Text](https://fonts.google.com/specimen/Crimson+Text) for the body font, [Raleway](https://fonts.google.com/specimen/Raleway) for the headings and [Sue Ellen Francisco](https://fonts.google.com/specimen/Sue+Ellen+Francisco) for the title. The color palette was generated using [coolors.co](https://coolors.co/).
+The book is typeset using [Atkinson Hyperlegible](https://fonts.google.com/specimen/Atkinson+Hyperlegible). The color palette was generated using [coolors.co](https://coolors.co/).
 
 **Statistical Computing**
 
@@ -81,4 +66,7 @@ The book is typeset using [Crimson Text](https://fonts.google.com/specimen/Crims
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" class="center-image" style="border-width:0"/></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 
 *Note:* If you want to contribute to this, create a Pull Request or [send me an email](mailto: zief0002@umn.edu).) Also, feel free to offer criticism, suggestion, and feedback. You can either [open an issue](https://github.com/zief0002/modeling/issues) on the book's github page or [send me an email](mailto: zief0002@umn.edu) directly.
+
+
+## References
 
