--- a/docs/codebooks/gapminder.qmd
+++ b/docs/codebooks/gapminder.qmd
@@ -1,11 +1,11 @@
-## gapminder.csv {#gapminder}
+## gapminder.csv {-}
 
 ```{r}
 #| echo: false
-source("scripts/_common.R")
+source("../scripts/_common.R")
 ```
 
-The data in [gapminder.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/gapminder.csv) contains data on 6 attributes for 193 countries. These data, based on 2017 measures collected by World Bank, were compiled by [gapminder.org](https://www.gapminder.org/) and made available free under the [CC-BY license](https://creativecommons.org/licenses/by/4.0/). The variables are:
+The data in **gapminder.csv** contains data on 6 attributes for 193 countries. These data, based on 2017 measures collected by World Bank, were compiled by [gapminder.org](https://www.gapminder.org/) and made available free under the [CC-BY license](https://creativecommons.org/licenses/by/4.0/). The variables are:
 
 - `country`: The name of the country
 - `region`: The world region (Africa, Americas, Asia, or Europe)
