--- a/codebooks/pew.qmd
+++ b/codebooks/pew.qmd
@@ -1,15 +1,15 @@
-## pew.csv {#pew}
+## pew.csv {-}
 
 ```{r}
 #| echo: false
-source("scripts/_common.R")
+source("../scripts/_common.R")
 ```
 
-This data, stored in [pew.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/pew.csv) are a subset of data collected from a telephone survey conducted in February 2007 by the [Pew Research Center for The People and The Press](https://www.pewresearch.org/dataset/february-2007-political-knowledge-survey/) to evaluate how much Americans know about national and international affairs. The sample of 1,502 Americans constitute a national probability sample representative of the American public. The attributes are:
+This data, stored in [pew.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/pew.csv) are a subset of data collected from a telephone survey conducted in February 2007 by the [Pew Research Center for The People and The Press](https://www.pewresearch.org/dataset/february-2007-political-knowledge-survey/) to evaluate how much Americans know about national and international affairs. The sample of 1,094 Americans constitute a national probability sample representative of the American public. The attributes are:
 
 - `id`: ID variable 
 - `knowledge`: Respondent's score on the *News Knowledge Test*. Scores range between 0 (which indicates no news knowledge) and 100 (a perfect score).
-- `news_source`: Source of the respondent's news. They were asked whether they get their news from conservative sources (e.g., Rush Limbaugh, the O'Reilly factor), liberal sources (e.g., NPR, News Hour with Jim Lehrer), or comedy sources (e.g.,Daily Show, Colbert Report). These were then combined to form this attribute. Sources include: `All`, `Comedy`, `Conservative`, `Conservative_Comedy`, `Conservative_Liberal`, `Liberal`, `Liberal_Comedy`, and `None`.
+- `news_source`: Source of the respondent's news. They were asked whether they get their news from conservative sources (e.g., Rush Limbaugh, the O'Reilly factor), liberal sources (e.g., NPR, News Hour with Jim Lehrer), or comedy sources (e.g.,Daily Show, Colbert Report). These were then combined to form this attribute. Sources include: `Comedy`, `Conservative`, `Liberal`, and `None`.
 - `news`: Index of the respondent's news exposure, based on answers to 10 items about use of various news sources. Scores range from 0 (no news exposure) to 100 (maximum involvement with all 10 sources)
 - `ideology`: Index of political ideology. Scores range from 0 (liberal as possible) to 100 (conservative as possible).
 - `engagement`: Index of political engagement, based on responses to five items about personal involvement with political issues and activities. Scores range between 0 (no political engagement) and 100 (maximum engagement)
