--- a/codebooks/scoobydoo.qmd
+++ b/codebooks/scoobydoo.qmd
@@ -1,8 +1,8 @@
-## scoobydoo.csv {#scoobydoo}
+## scoobydoo.csv {-}
 
 ```{r}
 #| echo: false
-source("scripts/_common.R")
+source("../scripts/_common.R")
 ```
 
 Scooby-Doo is a popular television and movie franchise in the United States which has been airing for over 50 years!  [Scoobypedia](https://scoobydoo.fandom.com/wiki/Scoobypedia) (an encyclopedia of the franchise) describes the show as follows:
@@ -11,7 +11,7 @@ Scooby-Doo is a popular television and movie franchise in the United States whic
 
 Mystery Inc. is an amateur crime-solving group of friends composed of Fred Jones (the team's leader), Daphne Blake (fashionista and musician), Velma Dinkley (bespectacled resident genius), Shaggy Rogers (owner and best friend to Scooby-Doo), and Scooby-Doo (the talking dog mascot). 
 
-The data in [scoobydoo.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/scoobydoo.csv) are a subset of data collected by [plummye](https://www.kaggle.com/williamschooleman) who "[t]ook ~1 year to watch every Scooby-Doo iteration and track every variable." There are 372 cases in the data.
+The data in **scoobydoo.csv** are a subset of data collected by [plummye](https://www.kaggle.com/williamschooleman) who "[t]ook ~1 year to watch every Scooby-Doo iteration and track every variable." There are 372 cases in the data.
 
 The variables are:
 
