--- a/docs/codebooks/keith-gpa.qmd
+++ b/docs/codebooks/keith-gpa.qmd
@@ -1,11 +1,11 @@
-## keith-gpa.csv {#keith}
+## keith-gpa.csv {-}
 
 ```{r}
 #| echo: false
-source("scripts/_common.R")
+source("../scripts/_common.R")
 ```
 
-This data, stored in [keith-gpa.csv](https://raw.githubusercontent.com/zief0002/modeling/main/data/keith-gpa.csv) includes three attributes on $n = 100$ 8th-grade students. These data come from @Keith:2015. The attributes are:
+This data, stored in **keith-gpa.csv** includes three attributes on $n = 100$ 8th-grade students. These data come from @Keith:2015. The attributes are:
 
 - `gpa`: Overall Grade-point average (GPA) in all subjects (on a standard 100-point scale)
 - `homework`: Average time spent on homework per week across all subjects (in hours)
